--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>AdminPro</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="285568127265-g870knshlhgtajg6v3ot19kdvnf6pg1f.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js"></script>
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <!-- Favicon icon -->
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
